# LetsDoIT

./: .gitignore  README.md  index.html  instruction.txt  metadata.json  package-lock.json  package.json  vite.config.ts
.kimchi/plans/: plan-1783527197561.md
assets/css/: base.css  components.css  layout.css  screens.css  tokens.css
assets/js/: data.js  router.js  state.js
src/: App.tsx  index.css  mockData.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AuthScreens.tsx  StudentDashboard.tsx  TeacherDashboard.tsx  VisualFlowCharts.tsx
src/services/: ai.ts  classroomStore.ts  desktop.ts  http.ts  localModel.ts  pdf.ts  rag.ts
