[package]
name = "letsdoit"
version = "0.1.0"
description = "Offline-first AI education desktop app"
authors = ["Waqar Ahmed"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "letsdoit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["time"] }
